--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
-		<meta name="description" content="fvgbh" />
-		<meta property="og:site_name" content="gydth" />
-		<meta property="og:title" content="gydth" />
+		<meta name="description" content="mc-mods" />
+		<meta property="og:site_name" content="mc-mods" />
+		<meta property="og:title" content="mc-mods" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="fvgbh" />
+		<meta property="og:description" content="mc-mods" />
 		
 		<link rel="stylesheet" href="assets/main.css" />
 	</head>
