remove embed now!

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>gydth</title>
+		<title>mc-mods</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
-		<meta name="description" content="mc-mods" />
 		
 		<link rel="stylesheet" href="assets/main.css" />
 	</head>
