--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE HTML>
-<html lang="en">
-	<head>
-		<title>mc-mods</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<meta name="color-scheme" content="light only" />
-		
-		<link rel="stylesheet" href="assets/main.css" />
-	</head>
-	<body>
-		<div id="wrapper">
-			<div id="main">
-				<div class="inner">
-					<div id="list01" class="list"><ul><li><p><a href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/mods.zip">Mods.zip</a></p></li><li><p><a href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/Modrinth.mrpack">Modrinth</a></p></li><li><p><a href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/CurseForge.zip">Curseforge</a></p></li></ul></div>
-				</div>
-			</div>
-		</div>
-		<script src="assets/main.js"></script>
-	</body>
-</html>
+<span class="--p"><span class="--a" data-href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/mods.zip">Mods.zip</span><br><span class="--a" data-href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/Modrinth.mrpack">Modrinth</span><br><span class="--a" data-href="https://dash.cloudflare.com/api/v4/accounts/52738b6549d51d71683b43d029fdfd5b/r2/buckets/mc-mods/objects/CurseForge.zip">Curseforge</span></span>
