--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<span class="p"><a>Fuck Yall FR.</a><br>
-<span class="p"><a>Vanilla Server. ONLINE</a><br> <a href="https://pub-0c1ba44ebc53490e8934b634ca04cbc4.r2.dev/mods.zip">Mods.zip</a><br> <a href="https://cdn.modrinth.com/data/I644X5O9/versions/PUqfBTyv/Pack.mrpack">Modrinth</a><br> <a href="https://pub-0c1ba44ebc53490e8934b634ca04cbc4.r2.dev/Pack.zip">Curseforge</a></span>
-<span class="p"><a> </a><br> <span class="p"><a> </a><br> <span class="p"><a>Modded Server. OFFLINE</a><br> <a href="https://ransore.com/mods.rar">Mods.rar</a><br> <a href="https://ransore.com/Inside The System 1.20.1.mrpack">Modrinth</a><br> <a href="https://ransore.com/Inside The System 1.20.1.zip">Curseforge</a></span>
+<style>
+    body {
+	    background-color: 000000;
+		color: ffffff
+    }
+</style>
+<span class="p"><a>Fuck Yall FR.</a>
+<br> <span class="p"><a>Vanilla Server. OFFLINE</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/mods.zip">Mods.zip</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/RansoreSMP.mrpack">Modrinth</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/RansoreSMP.zip">Curseforge</a>
+</span>
+
+<span class="p"><br> <br>
+<span class="p"><a>Modded Server. OFFLINE</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Modded/mods.zip">Mods.zip</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.mrpack">Modrinth</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.zip">Curseforge</a>
+</span>
