--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </span>
 
 <span class="p"><br> <br>
-<span class="p"><a>Modded Server. OFFLINE</a>
+<span class="p"><a>Modded Server. Online</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Modded/mods.zip">Mods.zip</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.mrpack">Modrinth</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.zip">Curseforge</a>
