--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     }
 </style>
 <span class="p"><a>Fuck Yall FR.</a>
-<br> <span class="p"><a>Vanilla Server. OFFLINE</a>
-<br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/mods.zip">Mods.zip</a>
+<br> <span class="p"><a>Vanilla | OFFLINE</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/RansoreSMP.mrpack">Modrinth</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/RansoreSMP.zip">Curseforge</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Vanilla/mods.zip">Mods.zip</a>
 </span>
 
 <span class="p"><br> <br>
-<span class="p"><a>Modded Server. Online</a>
-<br> <a href="https://cdn.ransore.com/mc-mods/Modded/mods.zip">Mods.zip</a>
+<span class="p"><a>Zombie Invade 100 Days | Online</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.mrpack">Modrinth</a>
 <br> <a href="https://cdn.ransore.com/mc-mods/Modded/Modpack.zip">Curseforge</a>
+<br> <a href="https://cdn.ransore.com/mc-mods/Modded/mods.zip">Mods.zip</a>
 </span>
